--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-self: center;
+  justify-content: center;
   height: 100vh;
   overflow: hidden;
   margin: 0;
